fix dashboard layout on mobile and rm another usage of material-ui grid

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,10 @@
   margin: 42px auto 20px;
   max-width: 900px;
   padding: 0 12px;
+
+  @media (min-width: $md-screen-min) {
+    padding: 0;
+  }
 }
 
 .dark-link {
